# guillaume-be_rust-tokenizers

main/: Cargo.toml
python-bindings/: Cargo.toml
python-bindings/tests/: test_benchmark_tokenization_sentencepiece.py
